<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic" />
        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />
        <Button
            android:id="@+id/auth_button"
            android:text="Link with Dropbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_test"
            android:id="@+id/test_output"
            android:textAlignment="center"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logged_in_display"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        >
        <com.chalkbored.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="-24dp"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <!-- Top Row -->
            <LinearLayout
                android:id="@+id/paint_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal" >
                <ImageButton
                    android:layout_width="@dimen/chalk_length"
                    android:layout_height="@dimen/chalk_height"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/chalk1"
                    android:tag="#65BCA5" />
                <ImageButton
                    android:layout_width="@dimen/chalk_length"
                    android:layout_height="@dimen/chalk_height"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/chalk2"
                    android:tag="#F5CC5E" />
                <ImageButton
                    android:layout_width="@dimen/chalk_length"
                    android:layout_height="@dimen/chalk_height"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/chalk3"
                    android:tag="#F26949" />
                <ImageButton
                    android:layout_width="@dimen/chalk_length"
                    android:layout_height="@dimen/chalk_height"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/chalk4"
                    android:tag="#F7961D" />
                <ImageButton
                    android:layout_width="@dimen/chalk_length"
                    android:layout_height="@dimen/chalk_height"
                    android:layout_margin="2dp"
                    android:background="@null"
android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/chalk5"
                    android:tag="#FFFFFF" />

                <ImageButton
                    android:id="@+id/erase_btn"
                    android:layout_height="@dimen/eraser_height"
                    android:layout_width="@dimen/chalk_length"
                    android:contentDescription="@string/erase"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:src="@drawable/eraser1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>